@@ -1,2 +1,4 @@
 usr/bin/dh-make-perl                usr/bin/cpan2deb
+usr/bin/dh-make-perl                usr/bin/cpan2dsc
 usr/share/man/man1/dh-make-perl.1p  usr/share/man/man1/cpan2deb.1p
+usr/share/man/man1/dh-make-perl.1p  usr/share/man/man1/cpan2dsc.1p
