@@ -50,7 +50,9 @@ dh-make-perl (0.77-1) UNRELEASED; urgency=low
   * Add patch by Matthew Gabeler-Lee to understand packages named
     "-vX.Y.Z". (Closes: #701140)
   * Fix "fatal: pathspec '…' did not match any files" error of "git add".
-  * Add option --build-source to also build .dsc file (c.f. #645011)
+  * Add option --build-source to build .dsc file (c.f. #645011). Also add
+    a cpan2dsc 'flavour' of dh-make-perl. If it is called by that name,
+    the behaviour changes for easy .dsc creation.
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Wed, 19 Sep 2012 15:11:17 +0200
 
